# ponderadaS4

./: gitignore  main.py  pyproject.toml  readme.md
components/: big_numbers.py  botao_refresh_dash.py  erros_por_servico.py  eventos_por_tempo.py  service_latency_dash.py
config/: dash_style.py  settings.py
visoes/: consultar_todos_logs.py  erros_por_servico.py  eventos_por_tempo.py  service_latency.py  visoes_gerais.py
