[project]
name = "dash-telemtria"
version = "0.1.0"
description = ""
authors = [
    {name = "DevMarryMontan",email = "Joao.Montagna@sou.inteli.edu.br"}
    {name = "DevEmelyy",email = "Emely.Tavares@sou.inteli.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.43.0,<2.0.0)",
    "supabase (>=2.13.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "plotly (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
